[package]
name = "tty-info"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["linux-syscalls/std", "linux-stat/std", "bsd-errnos/std", "alloc"]
alloc = []
c = ["libc"]

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "watchos", target_os = "tvos", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
bsd-errnos = { version = "0.0.1", default-features = false }
libc = "0.2.147"

[build-dependencies]
bindgen = "0.66.1"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
linux-syscalls = { version = "0.3.1", default-features = false }
linux-stat = { version = "0.3.3", default-features = false }
linux-raw-sys = "0.4.3"
itoap = { version = "1.0.1", features = ["simd"] }
atoi = "2.0.0"
memchr = "2.5.0"
libc = { version = "0.2.147", optional = true }
